# leave-me-alone

./: CLAUDE.md  README.md  check.sh  makefile  pyproject.toml  pyrightconfig.json  requirements.txt  run_app.sh
.claude/: settings.json
.claude/commands/: check.md
app/: main.py
app/components/: calendar_heatmap.py  consensus_display.py  household_input.py  inputs.py  results_display.py
app/demos/: consensus_demo.py
app/models/: leave_request.py
app/services/: CLAUDE.md  consensus_service.py  holiday_service.py  leave_model.py  optimization_service.py
app/services/solvers/: __init__.py  base.py  benchmark.py  gurobi_solver.py  ortools_solver.py  registry.py  scip_solver.py  xpress_solver.py
app/state/: session_manager.py
app/tests/: test_consensus_service.py  test_household_input.py  test_optimization_service.py  test_solvers.py
app/tests.py/: test_holiday_service.py  test_leave_model.py  test_optimization_service.py
app/utils/: config_loader.py  date_utils.py  validators.py
paper/: .gitignore  README.md  build.sh  main.tex  references.bib
paper/experiments/: make_figures.py  make_tables.py  run_experiments.py
paper/results/: results.json
paper/tables/: tab_alpha.tex  tab_comparison.tex  tab_leverage.tex  tab_max_stretch.tex  tab_scaling.tex
